--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -7,24 +7,29 @@
     <title>Desafio-Backend</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+
 
 
 </head>
 <body>
     <div class="page">
-        <form action="/ticket" method="POST" class="formemail">
+        <form id="contact-form" class="formemail" action="/ticket" method="POST">
             <div class="campoemail">
                 <h1>Formulário para Contato</h1>
             </div>
             <p>Digite os dados no campo abaixo.</p>
             <label for="name">Nome</label>
-            <input type="text" placeholder="Digite seu nome" name="name" required/>
+            <input type="text" id="name" name="name" placeholder="Digite seu nome" required/>
             <label for="email">E-mail</label>
-            <input type="email" placeholder="Digite seu e-mail" name="email" required/>
-            <label for="comment">Mensagem</label>
-            <textarea placeholder="Digite sua mensagem" name="comment"required></textarea>
+            <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required/>
+            <label for="message">Mensagem</label>
+            <textarea id="message" name="message" placeholder="Digite sua mensagem"required></textarea>
 
             <div class="g-recaptcha" data-sitekey="6Lejt1wqAAAAAF9fnkr8pOjVxuOG-yRv7qKBdoWX"></div>
+
+            <div id="error-message" style="color: rgb(168, 0, 0); display: none;"></div>
+            <div id="success-message" style="color: rgb(9, 202, 9); display: none;"></div>
 
             <input type="submit" value="Enviar" id="Enviar" class="btn" />
         </form>
